---
title: V-SPORT ERD - Tài khoản & Phân quyền
---
erDiagram
  Accounts {
    INT AccountID PK "NOT NULL"
    VARCHAR(50) Username
    VARCHAR(MAX) Password "NOT NULL"
    INT FailedLoginCount
    BIT IsLocked
    DATETIME LastLogin
    VARCHAR(100) GoogleID
    VARCHAR(100) FacebookID
    NVARCHAR(100) FullName
    VARCHAR(15) PhoneNumber
    VARCHAR(100) Email
    INT RoleID
    VARCHAR(100) ZaloID
    VARCHAR(100) MessengerID
    INT DiemUyTin
    INT DiemTrinhDo
    VARCHAR(20) MaNganHang
    VARCHAR(50) SoTaiKhoan
    NVARCHAR(50) ViTriSoTruong
    BIT NhanThongBaoSOS
    DATE NgaySinh
    NVARCHAR(10) GioiTinh
    DATETIME CreatedAt
    BIT IsDeleted
    INT CoSoID
    DATETIME DeletedAt
    INT DeletedBy
    NVARCHAR(255) AvatarUrl
    INT CompletedBookingCount "NOT NULL"
    INT LateCancelCount "NOT NULL"
    INT NoShowCount "NOT NULL"
    BIT NhanThongBaoMarketing "NOT NULL"
  }
  Roles {
    INT RoleID PK "NOT NULL"
    NVARCHAR(50) RoleName "NOT NULL"
  }
  AdminTrash {
    INT TrashID PK "NOT NULL"
    NVARCHAR(100) EntityType "NOT NULL"
    INT EntityID "NOT NULL"
    NVARCHAR(255) DisplayName
    NVARCHAR(100) SourceTable "NOT NULL"
    NVARCHAR(100) OldStatus
    INT DeletedBy
    DATETIME2 DeletedAt "NOT NULL"
    NVARCHAR(500) Reason
    BIT IsRestored "NOT NULL"
    INT RestoredBy
    DATETIME2 RestoredAt
  }
  AuditLog {
    BIGINT AuditLogID PK "NOT NULL"
    INT ActorAccountID
    NVARCHAR(255) ActorName "NOT NULL"
    INT ActorRole "NOT NULL"
    INT CoSoID
    NVARCHAR(100) Action "NOT NULL"
    NVARCHAR(100) EntityType "NOT NULL"
    NVARCHAR(50) EntityID
    NVARCHAR(500) EntityName
    NVARCHAR(MAX) Details
    NVARCHAR(50) IpAddress
    DATETIME2 CreatedAt "NOT NULL"
  }
  CustomerReputationHistory {
    BIGINT ReputationHistoryID PK "NOT NULL"
    INT AccountID "NOT NULL"
    INT DatSanID
    NVARCHAR(30) ActionType "NOT NULL"
    INT ScoreDelta "NOT NULL"
    INT ScoreBefore "NOT NULL"
    INT ScoreAfter "NOT NULL"
    NVARCHAR(255) Reason
    DATETIME2 CreatedAt "NOT NULL"
    INT CreatedBy
    NVARCHAR(50) IpAddress
  }
  MonTheThaoYeuThich {
    INT AccountID PK "NOT NULL"
    INT MonTheThaoID PK "NOT NULL"
    DATETIME NgayThêm
  }
  ThongBao {
    INT ThongBaoID PK "NOT NULL"
    INT AccountID "NOT NULL"
    NVARCHAR(200) TieuDe "NOT NULL"
    NVARCHAR(MAX) NoiDung
    NVARCHAR(50) LoaiThongBao
    BIT DaDoc
    DATETIME ThoiGianGui
    INT MaBanGhi
    VARCHAR(500) DuongDan
    BIT IsDeleted "NOT NULL"
    DATETIME DeletedAt
    INT DeletedBy
  }
  CoSo ||--o{ Accounts : "CoSoID"
  Roles ||--o{ Accounts : "RoleID"
  Accounts ||--o{ CustomerReputationHistory : "AccountID"
  LichDatSan ||--o{ CustomerReputationHistory : "DatSanID"
  Accounts ||--o{ MonTheThaoYeuThich : "AccountID"
  MonTheThao ||--o{ MonTheThaoYeuThich : "MonTheThaoID"
  Accounts ||--o{ ThongBao : "AccountID"
